# agent_pqc_id

./: .gitignore  README.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  agent.py  api.py  audit.py  bootstrap.py  config.py  crypto.py  db.py  docker-compose.yml  keystore.py  kms.py  mcp_server.py  models.py  pyproject.toml  signing.py
backend/seed/: 01_schema.sql  02_data.sql
backend/tests/: conftest.py  test_api.py  test_crypto.py  test_e2e.py  test_keystore.py  test_kms.py  test_signing.py
frontend/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentDetail.tsx  AgentRail.tsx  AuditFeed.tsx  ChatPanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/lib/: api.ts
